java 9 compatibility